bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,6 @@
 pipelines:
     default:
-      - steps:
+      - step:
           name: Sync GitHub Mirror
           image: alpine/git:latest
           clone:
